# cawlign

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  doxygen-pdf.yml  doxygen.yml  jsdoc-doxygen.yml
docs/html/: alignment_8h_source.html  annotated.html  annotated_dup.js  argparse_8hpp_source.html  classCawalignCodonScores-members.html  classCawalignCodonScores.html  classCawalignCodonScores.js  classCawalignSimpleScores-members.html  classCawalignSimpleScores.html  classCawalignSimpleScores.js  classConfigParser-members.html  classConfigParser.html  classConfigParser.js  classStringBuffer-members.html  classStringBuffer.html  classStringBuffer.js  classVector-members.html  classVector.html  classVector.js  classVectorFP-members.html  classVectorFP.html  classVectorFP.js  class_cawalign_codon_scores-members.html  class_cawalign_codon_scores.html  class_cawalign_codon_scores.js  class_cawalign_simple_scores-members.html  class_cawalign_simple_scores.html  class_cawalign_simple_scores.js  class_config_parser-members.html  class_config_parser.html  class_config_parser.js  class_string_buffer-members.html  class_string_buffer.html  class_string_buffer.js  class_vector-members.html  class_vector.html  class_vector.js  class_vector_f_p-members.html  class_vector_f_p.html  class_vector_f_p.js  (+23 more)
res/references/: HXB2_pol
res/scoring/: BLOSUM62  HIV_BETWEEN_F  NUC4.4
src/: alignment.cpp  alignment.h  argparse.cpp  argparse.hpp  cawlign.cpp  configparser.cpp  configparser.hpp  scoring.cpp  scoring.hpp  stringBuffer.cc  stringBuffer.h  tn93_shared.cc  tn93_shared.h
test/: HIV1-int-1819.fa  HIV1-nef-215.fa  HIV1-pol-326.fa  HIV1-pol-random-lanl-small.fa  HIV1-prrt-602.fa  SC2-popset-1836445090.fa
test/cases/: KX988404-rc.fa  KX988404.fa  MF499727.fa  MN789150.fa  MT155185.fa  MZ766877.fa  ON015205.fa  OQ948666-pr+int.fa  OQ948666-pr.fa  OQ948666-rt.fa  (+2 more)
utils/: code_mapper.bf  compare-overlap.py  extract.py  run-pair.sh  subsample.py
(+22 files in other folders)
